--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
-    "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "^0.12.52",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "expo": "^49.0.23",
     "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "^1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-web": "~0.19.6"
+    "react-native": "^0.71.14",
+    "react-native-web": "~0.19.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   },
   "private": true
 }
