--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
     "expo": "^49.0.23",
     "expo-font": "~11.4.0",
     "expo-status-bar": "^1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.71.14",
+    "react-native": "^0.72.10",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
